--- a/css/index.css
+++ b/css/index.css
@@ -2,11 +2,17 @@
 
 @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/variable/pretendardvariable.css");
 
-@import "./common.css";
-@import "./layout.css";
-@import "./header.css";
-@import "./visual.css";
-@import "./footer.css";
+@import url("./common.css");
+@import url("./layout.css");
+@import url("./header.css");
+@import url("./visual.css");
+@import url("./recommend.css");
+@import url("./tour.css");
+@import url("./ticket.css");
+@import url("./live.css");
+@import url("./book.css");
+@import url("./event.css");
+@import url("./footer.css");
 
 * {
   margin: 0;
@@ -26,6 +32,10 @@ ul {
 img {
   border: 0;
   vertical-align: middle;
+}
+
+button {
+  font-family: "Pretendard", sans-serif;
 }
 
 html {
