인터파크 메인에 쇼핑추천, 투어특가, 티켓랭킹 슬라이드 구현

--- a/css/book.css
+++ b/css/book.css
@@ -73,8 +73,25 @@
   font-weight: 700 !important;
 }
 
+.book-slide-wrap {
+  position: relative;
+  height: 400px;
+  margin-top: 23px;
+  background-color: slateblue;
+}
+
 .book-slide {
   position: relative;
+}
+
+.book-slide-item {
+  position: relative;
+}
+
+.book-slide-item a {
+  position: relative;
+  width: 100%;
+  display: block;
 }
 
 .book-footer {
