--- a/css/live.css
+++ b/css/live.css
@@ -25,13 +25,97 @@
   position: relative;
 }
 
+.live-slide-wrap {
+  position: relative;
+  height: 455px;
+  margin-top: 23px;
+}
+
+.live-slide {
+  position: relative;
+}
+
+.live-slide-item {
+  position: relative;
+}
+
+.live-link {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+
+.live-img {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.live-img img {
+  width: 300px;
+  height: 456px;
+}
+
+.live-slide-prev {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  width: 50px;
+  height: 50px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 0.8rem rgba(0, 0, 0, 0.13);
+  z-index: 2;
+  background-color: rgba(255, 255, 255, 0.9);
+  cursor: pointer;
+  transform: translateX(-50%) translateY(-50%);
+  border-radius: 50%;
+}
+
+.live-slide-prev::before {
+  content: "";
+  position: relative;
+  width: 10px;
+  height: 18px;
+  display: block;
+  margin: 0 auto;
+  background: url("/images/slider_arrow.svg") no-repeat center;
+  /* rotate 돌리기 , deg -> "각도" */
+  transform: rotateY(180deg);
+}
+
+.live-slide-next {
+  position: absolute;
+  top: 50%;
+  right: 0;
+  width: 50px;
+  height: 50px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 0.8rem rgba(0, 0, 0, 0.13);
+  z-index: 2;
+  background-color: rgba(255, 255, 255, 0.9);
+  cursor: pointer;
+  transform: translateX(50%) translateY(-50%);
+  border-radius: 50%;
+}
+
+.live-slide-next::before {
+  content: "";
+  position: relative;
+  width: 10px;
+  height: 18px;
+  display: block;
+  margin: 0 auto;
+  background: url("/images/slider_arrow.svg") no-repeat center;
+}
+
 .live-footer {
   position: relative;
   width: auto;
   height: 5.6rem;
   display: flex;
   justify-content: center;
-  margin: 2rem auto 0;
+  margin-top: 20px;
 }
 
 .live-footer button {
