--- a/css/recommend.css
+++ b/css/recommend.css
@@ -16,7 +16,6 @@
 
 .recommend-title {
   position: relative;
-  margin-bottom: 10px;
   font-size: 2.8rem;
   font-weight: 700;
   color: #000;
@@ -26,6 +25,7 @@
 .recommend-txt {
   position: relative;
   display: block;
+  margin-bottom: 10px;
   font-size: 1.8rem;
   color: #a7a9a7;
   text-align: center;
@@ -70,14 +70,15 @@
 .recommend-cate-bt-active {
   border: 1px solid transparent !important;
   background-color: #333 !important;
-  color: #fff !important;
   font-weight: 700 !important;
+  color: #fff !important;
 }
 
 /* 다음 코드 변경 하지 마세요. */
-.swiper {
-  width: 100%;
-  height: 100%;
+.recommend-slide-wrap {
+  position: relative;
+  height: 425px;
+  margin-top: 23px;
 }
 
 .recommend-slide {
@@ -88,13 +89,83 @@
   position: relative;
 }
 
-.recommend-slide-item a {
+.recommend-link {
   position: relative;
   width: 100%;
+  height: 100%;
   display: block;
 }
 
-.recommend-slide-item a img {
+.recommend-slide-item h1 {
+  margin-top: 50%;
+  font-size: 25px;
+  text-align: center;
+  border-radius: 25px;
+}
+
+.recommend-img {
+  position: relative;
+  width: 100%;
+  height: 310px;
+  overflow: hidden;
+}
+
+.recommend-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.recommend-info {
+  position: relative;
+  height: calc(100% - 310px);
+  padding: 22px 20px;
+  background-color: rgb(144, 215, 165);
+}
+
+.recommend-good-list {
+  position: relative;
+}
+
+.recommend-good-list li {
+  position: relative;
+  margin-bottom: 10px;
+}
+
+.recommend-good-info-price {
+  position: relative;
+  overflow: hidden;
+  font-size: 1.8rem;
+  font-weight: 400;
+  color: #111;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.recommend-good-info-price b {
+  position: relative;
+  font-size: 2rem;
+  font-style: normal;
+  font-weight: 700;
+}
+
+.recommend-good-info-price em {
+  position: relative;
+  font-size: 2rem;
+  font-style: normal;
+  font-weight: 700;
+}
+
+.recommend-good-info-desc {
+  position: relative;
+  display: -webkit-box;
+  overflow: hidden;
+  font-size: 1.5rem;
+  color: #111;
+  word-break: keep-all;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
 }
 
 .recommend-slide-prev {
@@ -154,14 +225,26 @@
   width: auto;
   height: 5.6rem;
   display: flex;
+  align-items: center;
   justify-content: center;
+  margin-top: 20px;
 }
 
 .recommend-footer button {
   position: relative;
+  display: flex;
+  align-items: center;
   padding: 0 3.9rem;
   border: 1px solid rgba(0, 0, 0, 0.1);
   font-size: 1.6rem;
   line-height: 5.6rem;
   border-radius: 3.8rem;
+}
+.footer-bt-img {
+  position: relative;
+  width: 7px;
+  height: 13px;
+  display: block;
+  background: url("/images/slider_arrow.svg") no-repeat center;
+  object-fit: cover;
 }
