--- a/css/ticket.css
+++ b/css/ticket.css
@@ -73,8 +73,153 @@
   font-weight: 700 !important;
 }
 
+.ticket-slide-wrap {
+  position: relative;
+  height: 520px;
+  margin-top: 23px;
+}
+
 .ticket-slide {
   position: relative;
+}
+
+.ticket-slide-item {
+  position: relative;
+}
+
+.ticket-link {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+
+.ticket-slide-item h1 {
+  margin-top: 50%;
+  font-size: 25px;
+  text-align: center;
+  border-radius: 25px;
+}
+
+.ticket-img {
+  position: relative;
+  width: 100%;
+  height: 400px;
+  overflow: hidden;
+}
+
+.ticket-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.ticket-info {
+  position: relative;
+  height: calc(100% - 310px);
+  padding: 22px 20px;
+  background-color: rgb(144, 215, 165);
+}
+
+.ticket-good-list {
+  position: relative;
+}
+
+.ticket-good-list li {
+  position: relative;
+  margin-bottom: 10px;
+}
+
+.ticket-info-title {
+  position: relative;
+  overflow: hidden;
+  font-size: 1.8rem;
+  font-weight: 400;
+  color: #111;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.ticket-info-title b {
+  position: relative;
+  font-size: 2rem;
+  font-style: normal;
+  font-weight: 700;
+}
+
+.ticket-info-location {
+  position: relative;
+  font-size: 1.3rem;
+  font-style: normal;
+  color: #666;
+  font-weight: 700;
+}
+
+.ticket-info-time {
+  position: relative;
+  overflow: hidden;
+  font-size: 1.2rem;
+  color: #999;
+}
+
+.ticket-info-tag {
+  position: relative;
+  overflow: hidden;
+  font-size: 1.5rem;
+  color: blue;
+  border: 1px solid blue;
+}
+
+.ticket-slide-prev {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  width: 50px;
+  height: 50px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 0.8rem rgba(0, 0, 0, 0.13);
+  z-index: 2;
+  background-color: rgba(255, 255, 255, 0.9);
+  cursor: pointer;
+  transform: translateX(-50%) translateY(-50%);
+  border-radius: 50%;
+}
+
+.ticket-slide-prev::before {
+  content: "";
+  position: relative;
+  width: 10px;
+  height: 18px;
+  display: block;
+  margin: 0 auto;
+  background: url("/images/slider_arrow.svg") no-repeat center;
+  /* rotate 돌리기 , deg -> "각도" */
+  transform: rotateY(180deg);
+}
+
+.ticket-slide-next {
+  position: absolute;
+  top: 50%;
+  right: 0;
+  width: 50px;
+  height: 50px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 0.8rem rgba(0, 0, 0, 0.13);
+  z-index: 2;
+  background-color: rgba(255, 255, 255, 0.9);
+  cursor: pointer;
+  transform: translateX(50%) translateY(-50%);
+  border-radius: 50%;
+}
+
+.ticket-slide-next::before {
+  content: "";
+  position: relative;
+  width: 10px;
+  height: 18px;
+  display: block;
+  margin: 0 auto;
+  background: url("/images/slider_arrow.svg") no-repeat center;
 }
 
 .ticket-footer {
@@ -83,6 +228,7 @@
   height: 5.6rem;
   display: flex;
   justify-content: center;
+  margin-top: 20px;
 }
 
 .ticket-footer button {
