--- a/css/recommend.css
+++ b/css/recommend.css
@@ -1,7 +1,6 @@
 .recommend {
   position: relative;
   padding-top: 30px;
-  background-color: skyblue;
 }
 
 .recommend-inner {
@@ -94,6 +93,9 @@
   width: 100%;
   height: 100%;
   display: block;
+  border-top-left-radius: 25px;
+  border-top-right-radius: 25px;
+  box-shadow: 0 0 0.8rem rgba(0, 0, 0, 0.13);
 }
 
 .recommend-slide-item h1 {
@@ -107,6 +109,7 @@
   position: relative;
   width: 100%;
   height: 310px;
+  border-top-left-radius: 25px 25px;
   overflow: hidden;
 }
 
@@ -120,7 +123,8 @@
   position: relative;
   height: calc(100% - 310px);
   padding: 22px 20px;
-  background-color: rgb(144, 215, 165);
+  border-bottom-left-radius: 25px 25px;
+  background-color: rgb(237, 236, 236);
 }
 
 .recommend-good-list {
@@ -147,6 +151,7 @@
   font-size: 2rem;
   font-style: normal;
   font-weight: 700;
+  color: red;
 }
 
 .recommend-good-info-price em {
@@ -239,6 +244,7 @@
   font-size: 1.6rem;
   line-height: 5.6rem;
   border-radius: 3.8rem;
+  background-color: #fff;
 }
 .footer-bt-img {
   position: relative;
