--- a/css/book.css
+++ b/css/book.css
@@ -69,8 +69,8 @@
 .book-cate-bt-active {
   border: 1px solid transparent !important;
   background-color: #333 !important;
-  color: #fff !important;
   font-weight: 700 !important;
+  color: #fff !important;
 }
 
 .book-slide-wrap {
@@ -88,10 +88,115 @@
   position: relative;
 }
 
-.book-slide-item a {
+.book-link {
   position: relative;
   width: 100%;
+  height: 100%;
   display: block;
+}
+
+.book-slide-item h1 {
+  margin-top: 50%;
+  font-size: 25px;
+  text-align: center;
+  border-radius: 25px;
+}
+
+.book-img {
+  position: relative;
+  width: 100%;
+  height: 400px;
+  overflow: hidden;
+}
+
+.book-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.book-info {
+  position: relative;
+  height: calc(100% - 310px);
+  padding: 22px 20px;
+  background-color: rgb(144, 215, 165);
+}
+
+.book-info-title {
+  position: relative;
+  overflow: hidden;
+  font-size: 1.8rem;
+  font-weight: 400;
+  color: #111;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.book-info-title b {
+  position: relative;
+  font-size: 2rem;
+  font-style: normal;
+  font-weight: 700;
+}
+
+.book-info-price {
+  position: relative;
+  font-size: 1.3rem;
+  font-style: normal;
+  font-weight: 700;
+  color: #666;
+}
+
+.book-slide-prev {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  width: 50px;
+  height: 50px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 0.8rem rgba(0, 0, 0, 0.13);
+  z-index: 2;
+  background-color: rgba(255, 255, 255, 0.9);
+  cursor: pointer;
+  transform: translateX(-50%) translateY(-50%);
+  border-radius: 50%;
+}
+
+.book-slide-prev::before {
+  content: "";
+  position: relative;
+  width: 10px;
+  height: 18px;
+  display: block;
+  margin: 0 auto;
+  background: url("/images/slider_arrow.svg") no-repeat center;
+  /* rotate 돌리기 , deg -> "각도" */
+  transform: rotateY(180deg);
+}
+
+.book-slide-next {
+  position: absolute;
+  top: 50%;
+  right: 0;
+  width: 50px;
+  height: 50px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 0.8rem rgba(0, 0, 0, 0.13);
+  z-index: 2;
+  background-color: rgba(255, 255, 255, 0.9);
+  cursor: pointer;
+  transform: translateX(50%) translateY(-50%);
+  border-radius: 50%;
+}
+
+.book-slide-next::before {
+  content: "";
+  position: relative;
+  width: 10px;
+  height: 18px;
+  display: block;
+  margin: 0 auto;
+  background: url("/images/slider_arrow.svg") no-repeat center;
 }
 
 .book-footer {
@@ -100,6 +205,7 @@
   height: 5.6rem;
   display: flex;
   justify-content: center;
+  margin-top: 20px;
 }
 
 .book-footer button {
