--- a/css/recommend.css
+++ b/css/recommend.css
@@ -86,6 +86,7 @@
 
 .recommend-slide-item {
   position: relative;
+  height: 100%;
 }
 
 .recommend-link {
@@ -93,23 +94,38 @@
   width: 100%;
   height: 100%;
   display: block;
-  border-top-left-radius: 25px;
-  border-top-right-radius: 25px;
-  box-shadow: 0 0 0.8rem rgba(0, 0, 0, 0.13);
+
+  border: 1px solid rgba(0, 0, 0, 0.06);
+  border-radius: 25px;
 }
 
-.recommend-slide-item h1 {
-  margin-top: 50%;
-  font-size: 25px;
-  text-align: center;
-  border-radius: 25px;
+.recommend-slide-total {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.recommend-slide-total img {
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
+}
+
+.recommend-total-txt {
+  margin-top: 7px;
+  font-size: 1.4rem;
+  font-weight: 700;
+  color: #3a3a3a;
 }
 
 .recommend-img {
   position: relative;
   width: 100%;
   height: 310px;
-  border-top-left-radius: 25px 25px;
+  border-top-left-radius: 25px;
+  border-top-right-radius: 25px;
   overflow: hidden;
 }
 
@@ -123,8 +139,8 @@
   position: relative;
   height: calc(100% - 310px);
   padding: 22px 20px;
-  border-bottom-left-radius: 25px 25px;
-  background-color: rgb(237, 236, 236);
+  border-bottom-right-radius: 25px;
+  border-bottom-left-radius: 25px;
 }
 
 .recommend-good-list {
@@ -174,6 +190,7 @@
 }
 
 .recommend-slide-prev {
+  display: none;
   position: absolute;
   top: 50%;
   left: 0;
@@ -241,10 +258,10 @@
   align-items: center;
   padding: 0 3.9rem;
   border: 1px solid rgba(0, 0, 0, 0.1);
+  background-color: #fff;
   font-size: 1.6rem;
   line-height: 5.6rem;
   border-radius: 3.8rem;
-  background-color: #fff;
 }
 .footer-bt-img {
   position: relative;
