--- a/css/ticket.css
+++ b/css/ticket.css
@@ -1,7 +1,6 @@
 .ticket {
   position: relative;
   padding-top: 30px;
-  background-color: sandybrown;
 }
 
 .ticket-inner {
@@ -57,20 +56,20 @@
   position: relative;
   display: block;
   padding: 0px 20px;
-  line-height: 44px;
   border: 1px solid #e5e5e5;
+  background-color: #fff;
   font-size: 1.4rem;
   font-weight: 400;
+  line-height: 44px;
   cursor: pointer;
   border-radius: 30px;
-  background-color: #fff;
 }
 
 .ticket-cate-bt-active {
   border: 1px solid transparent !important;
   background-color: #333 !important;
-  color: #fff !important;
   font-weight: 700 !important;
+  color: #fff !important;
 }
 
 .ticket-slide-wrap {
@@ -85,6 +84,7 @@
 
 .ticket-slide-item {
   position: relative;
+  height: 100%;
 }
 
 .ticket-link {
@@ -94,11 +94,25 @@
   display: block;
 }
 
-.ticket-slide-item h1 {
-  margin-top: 50%;
-  font-size: 25px;
-  text-align: center;
-  border-radius: 25px;
+.ticket-slide-total {
+  height: 400px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.ticket-slide-total img {
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
+}
+
+.ticket-total-txt {
+  margin-top: 7px;
+  font-size: 1.4rem;
+  font-weight: 700;
+  color: #3a3a3a;
 }
 
 .ticket-img {
@@ -112,22 +126,14 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+  border-radius: 15px;
 }
 
 .ticket-info {
   position: relative;
   height: calc(100% - 310px);
-  padding: 22px 20px;
-  background-color: rgb(144, 215, 165);
-}
-
-.ticket-good-list {
-  position: relative;
-}
-
-.ticket-good-list li {
-  position: relative;
-  margin-bottom: 10px;
+  padding: 1.6rem 0.8rem;
+  line-height: 1.5;
 }
 
 .ticket-info-title {
@@ -147,27 +153,32 @@
   font-weight: 700;
 }
 
-.ticket-info-location {
+.ticket-info-place {
   position: relative;
-  font-size: 1.3rem;
+  font-size: 1.5rem;
   font-style: normal;
-  color: #666;
   font-weight: 700;
+  color: #666;
 }
 
-.ticket-info-time {
+.ticket-info-duration {
   position: relative;
   overflow: hidden;
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   color: #999;
 }
 
-.ticket-info-tag {
+.ticket-info-babge {
   position: relative;
-  overflow: hidden;
-  font-size: 1.5rem;
-  color: blue;
-  border: 1px solid blue;
+  height: 2.4rem;
+  display: inline-block;
+  margin-top: 4px;
+  padding: 0 0.8rem;
+  border: 1px solid #4a95ff;
+  font-size: 1.1rem;
+  line-height: 2.4rem;
+  color: #4a95ff;
+  border-radius: 0.3rem;
 }
 
 .ticket-slide-prev {
@@ -176,6 +187,7 @@
   left: 0;
   width: 50px;
   height: 50px;
+  display: none;
   border: 1px solid rgba(0, 0, 0, 0.1);
   box-shadow: 0 0 0.8rem rgba(0, 0, 0, 0.13);
   z-index: 2;
@@ -235,6 +247,7 @@
   position: relative;
   padding: 0 3.9rem;
   border: 1px solid rgba(0, 0, 0, 0.1);
+  background-color: rgba(0, 0, 0, 0);
   font-size: 1.6rem;
   line-height: 5.6rem;
   border-radius: 3.8rem;
