--- a/css/tour.css
+++ b/css/tour.css
@@ -1,7 +1,6 @@
 .tour {
   position: relative;
   padding-top: 30px;
-  background-color: yellowgreen;
 }
 
 .tour-inner {
@@ -75,7 +74,7 @@
 
 .tour-slide-wrap {
   position: relative;
-  height: 355px;
+  height: 364px;
   margin-top: 23px;
 }
 
@@ -85,6 +84,9 @@
 
 .tour-slide-item {
   position: relative;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+
+  border-radius: 12px;
 }
 
 .tour-slide-item a {
@@ -95,14 +97,63 @@
 
 .tour-slide-item a img {
   width: 100%;
-  height: 245px;
+  height: 241px;
+
+  border-top-left-radius: 12px;
+  border-top-right-radius: 12px;
 }
 
 .tour-slide-info {
   position: relative;
   width: 100%;
   height: 110px;
-  background-color: darkslategray;
+  padding: 1.6rem 1.6rem 1.2rem;
+  border-bottom-right-radius: 12px;
+
+  border-bottom-left-radius: 12px;
+  background-color: rgba(0, 0, 0, 0);
+  line-height: 1.5;
+}
+.tour-itemBadge {
+  position: absolute;
+  top: -1.1rem;
+  left: 1.6rem;
+  height: 2.2rem;
+  display: flex;
+  align-items: center;
+  padding: 0 0.7rem;
+  background-color: #1769ff;
+  font-size: 1.2rem;
+  font-weight: 600;
+  color: #fff;
+  border-radius: 0.4rem;
+}
+
+.tour-itemBenefit {
+  display: -webkit-box;
+  overflow: hidden;
+  font-size: 1.3rem;
+  font-weight: 700;
+  color: #1769ff;
+  word-break: break-all;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+}
+
+.tour-itemName {
+  font-size: 1.5rem;
+  color: #000;
+  white-space: nowrap;
+  overflow: hidden;
+  word-break: keep-all;
+  text-overflow: ellipsis;
+}
+
+.tour-itemPrice {
+  font-size: 2rem;
+  font-weight: 700;
+  color: #000;
 }
 
 .tour-slide-prev {
@@ -111,6 +162,7 @@
   left: 0;
   width: 50px;
   height: 50px;
+  display: none;
   border: 1px solid rgba(0, 0, 0, 0.1);
   box-shadow: 0 0 0.8rem rgba(0, 0, 0, 0.13);
   z-index: 2;
@@ -170,6 +222,7 @@
   position: relative;
   padding: 0 3.9rem;
   border: 1px solid rgba(0, 0, 0, 0.1);
+  background-color: rgba(0, 0, 0, 0);
   font-size: 1.6rem;
   line-height: 5.6rem;
   border-radius: 3.8rem;
