--- a/css/book.css
+++ b/css/book.css
@@ -1,7 +1,6 @@
 .book {
   position: relative;
   padding-top: 30px;
-  background-color: firebrick;
 }
 
 .book-inner {
@@ -77,7 +76,6 @@
   position: relative;
   height: 400px;
   margin-top: 23px;
-  background-color: slateblue;
 }
 
 .book-slide {
@@ -92,20 +90,12 @@
   position: relative;
   width: 100%;
   height: 100%;
-  display: block;
-}
-
-.book-slide-item h1 {
-  margin-top: 50%;
-  font-size: 25px;
-  text-align: center;
-  border-radius: 25px;
 }
 
 .book-img {
   position: relative;
   width: 100%;
-  height: 400px;
+  height: 335px;
   overflow: hidden;
 }
 
@@ -117,34 +107,28 @@
 
 .book-info {
   position: relative;
-  height: calc(100% - 310px);
+  width: 100%;
   padding: 22px 20px;
-  background-color: rgb(144, 215, 165);
 }
 
 .book-info-title {
   position: relative;
   overflow: hidden;
-  font-size: 1.8rem;
+  font-size: 1.5rem;
   font-weight: 400;
-  color: #111;
+  color: #000;
   white-space: nowrap;
   text-overflow: ellipsis;
-}
-
-.book-info-title b {
-  position: relative;
-  font-size: 2rem;
-  font-style: normal;
-  font-weight: 700;
+  text-align: center;
 }
 
 .book-info-price {
   position: relative;
-  font-size: 1.3rem;
+  font-size: 2rem;
   font-style: normal;
   font-weight: 700;
-  color: #666;
+  color: #000;
+  text-align: center;
 }
 
 .book-slide-prev {
@@ -153,6 +137,7 @@
   left: 0;
   width: 50px;
   height: 50px;
+  display: none;
   border: 1px solid rgba(0, 0, 0, 0.1);
   box-shadow: 0 0 0.8rem rgba(0, 0, 0, 0.13);
   z-index: 2;
@@ -212,6 +197,7 @@
   position: relative;
   padding: 0 3.9rem;
   border: 1px solid rgba(0, 0, 0, 0.1);
+  background-color: rgba(0, 0, 0, 0);
   font-size: 1.6rem;
   line-height: 5.6rem;
   border-radius: 3.8rem;
