--- a/css/event.css
+++ b/css/event.css
@@ -1,7 +1,7 @@
 .event {
   position: relative;
+  height: 520px;
   padding-top: 30px;
-  background-color: goldenrod;
 }
 
 .event-inner {
@@ -40,7 +40,6 @@
   position: relative;
   height: 350px;
   margin-top: 23px;
-  background-color: palegreen;
 }
 
 .event-slide {
@@ -58,56 +57,18 @@
   display: block;
 }
 
-.event-slide-item h1 {
-  margin-top: 50%;
-  font-size: 25px;
-  text-align: center;
-  border-radius: 25px;
-}
-
 .event-img {
   position: relative;
-  width: 100%;
-  height: 400px;
+  height: 350px;
   overflow: hidden;
+  border-radius: 15px;
+  border: 1px solid rgba(0, 0, 0, 0.06);
 }
 
 .event-img img {
-  width: 100%;
+  width: 350px;
   height: 100%;
   object-fit: cover;
-}
-
-.event-info {
-  position: relative;
-  height: calc(100% - 310px);
-  padding: 22px 20px;
-  background-color: rgb(144, 215, 165);
-}
-
-.event-info-title {
-  position: relative;
-  overflow: hidden;
-  font-size: 1.8rem;
-  font-weight: 400;
-  color: #111;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-}
-
-.event-info-title b {
-  position: relative;
-  font-size: 2rem;
-  font-style: normal;
-  font-weight: 700;
-}
-
-.event-info-price {
-  position: relative;
-  font-size: 1.3rem;
-  font-style: normal;
-  font-weight: 700;
-  color: #666;
 }
 
 .event-slide-prev {
@@ -152,7 +113,7 @@
   border-radius: 50%;
 }
 
-.book-slide-next::before {
+.event-slide-next::before {
   content: "";
   position: relative;
   width: 10px;
