--- a/css/footer.css
+++ b/css/footer.css
@@ -1,7 +1,8 @@
 .footer {
   width: 100%;
   height: 300px;
-  background-color: chocolate;
+  text-align: center;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 .footer div {
