--- a/css/ticket.css
+++ b/css/ticket.css
@@ -129,6 +129,16 @@
   border-radius: 15px;
 }
 
+.ticket-img-num {
+  position: absolute;
+  bottom: 5%;
+  left: 7%;
+  color: #fff;
+  font-weight: 700;
+  font-size: 7rem;
+  line-height: 4.5rem;
+}
+
 .ticket-info {
   position: relative;
   height: calc(100% - 310px);
